syntax = "proto3";

import "s_cluster.proto";

package rpc;

option go_package = "github.com/go-sif/sif/internal/rpc";

// ExecutionService coordinates the execution of DataFrames/Plans/Stages
service ExecutionService {
    rpc RunStage (MRunStageRequest) returns (MRunStageResponse) {}
}

message MRunStageRequest {
    int32 stageId = 1;
    bool   runShuffle = 2;
    bool   prepCollect = 3;
    bool   prepAccumulate = 4;
    uint64 assignedBucket = 5;
    repeated uint64 buckets = 6 [packed=true];
    repeated MWorkerDescriptor workers = 7;
}


message MRunStageResponse {
    // TODO
}
